--- a/STUDENTAPI-SPRINGBOOT/src/main/resources/application.properties
+++ b/STUDENTAPI-SPRINGBOOT/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=SpringBootProject
 server.port=2001
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jenkinsdb
+spring.datasource.url=jdbc:mysql://mysql-service:3306/jenkinsdb
 spring.datasource.username=root
 spring.datasource.password=password
 
